--- a/C++/VS/comm_protocols/comm_protocols.vcxproj
+++ b/C++/VS/comm_protocols/comm_protocols.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="..\..\src\main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\inc\main.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
