--- a/C++/VS/comm_protocols.vcxproj
+++ b/C++/VS/comm_protocols.vcxproj
@@ -21,6 +21,9 @@
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\inc\main.hpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{1584AF49-384A-4B7B-ABA1-2B591087257D}</ProjectGuid>
