--- a/C++/VS/comm_protocols.vcxproj
+++ b/C++/VS/comm_protocols.vcxproj
@@ -78,6 +78,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(SolutionDir)..\inc;$(IncludePath)</IncludePath>
+    <SourcePath>$(SolutionDir)..\src;$(SourcePath)</SourcePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
